force-app/main/default/objects/AssignmentGithub__c/AssignmentGithub__c.object-meta.xml
<CustomObject>
    <label>AssignmentGithub</label>
    <nameField>
        <label>AssignmentGithub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AssignmentGithubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>