force-app/main/default/objects/AssignmentGithub__c/fields/select_assignment__c.field-meta.xml
<CustomField>
    <fullName>select_assignment__c</fullName>
    <label>select assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>