force-app/main/default/objects/AssignmentGithub__c/fields/Teacher_Selection__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Selection__c</fullName>
    <label>Teacher Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upendra</fullName>
            </value>
            <value>
                <fullName>Neha</fullName>
            </value>
            <value>
                <fullName>Gaurav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>