force-app/main/default/objects/AssignmentGithub__c/fields/timeLeft__c.field-meta.xml
<CustomField>
    <fullName>timeLeft__c</fullName>
    <formula>TODAY() +3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timeLeft</label>
    <type>Date</type>
</CustomField>